discussion/kv_engine/175425/175425_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Remove isSupported(Algorithm)

We support all algorithms on all platforms

Change-Id: I0c860dc5b88a7d4225b3b0a50daca4fd85a4a78a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-05-27 07:06:02.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-27 08:28:01.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17809/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/sasl_server_test.cc:23:29: error: expected namespace name [clang-diagnostic-error]
        using namespace cb::crypto;
                            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17809/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/sasl_server_test.cc:23:29:
error: expected namespace name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17809/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39056/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/cbsasl/plain/check_password.cc:57:17:
error: no member named "crypto" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39056/ )

CMake error: CMakeLists.txt:139 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39056/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16847/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46486/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27994/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7423/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7528/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20603/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19597/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18790/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19942/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
